--- a/step 3/home_page.html
+++ b/step 3/home_page.html
@@ -62,8 +62,8 @@
                 <li class="nav-item"><a class="nav-link" href="user_login.html">User Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="scheduled.html">My Class Schedule</a></li>
                 <li class="nav-item"><a class="nav-link" href= "schedule_class.html">Avaliable Classes</a></li>
+                <li class="nav-item"><a class="nav-link" href= "instructor_certs.html">Instructors</a></li>
                 <li class="nav-item"><a class="nav-link" href="instructor_login.html">Instructor Login</a></li>
-                <input type="text" placeholder="Search..">
             </ul>
         </nav>
     </div>
