--- a/step 3/instructor_certs.html
+++ b/step 3/instructor_certs.html
@@ -97,9 +97,9 @@
               <li class="nav-item"><a class="nav-link" href="home_page.html">Home</a> </li>
               <li class="nav-item"><a class="nav-link" href="user_login.html">User Login</a></li>
               <li class="nav-item"><a class="nav-link" href="scheduled.html">My Class Schedule</a></li>
-              <li class="nav-item"><a class="active" href= "schedule_class.html">Avaliable Classes</a></li>
+              <li class="nav-item"><a class="nav-link" href= "schedule_class.html">Avaliable Classes</a></li>
+              <li class="nav-item"><a class="active" href= "instructor_certs.html">Instructors</a></li>
               <li class="nav-item"><a class="nav-link" href="instructor_login.html">Instructor Login</a></li>
-              <input type="text" placeholder="Search..">
           </ul>
       </nav>
   </div>
@@ -108,10 +108,10 @@
 </body>
 
 <table id= "certs">
-    <tr>
+    <trhead>
         <th>Class Type</th>
         <th></th>
-    </tr>
+    </trhead>
     <tr>
         <td>Yoga</td>
         <td><input type="checkbox" unchecked="checked" name="select"></td>
